2022-02-06  Fujii Hironori  <Hironori.Fujii@sony.com>

        REGRESSION(r288878) webkitpy.layout_tests.controllers.layout_test_finder_legacy_unittest.LayoutTestFinderTests tests are failing with Windows Python
        https://bugs.webkit.org/show_bug.cgi?id=236043
        <rdar://problem/88449289>

        Reviewed by Darin Adler.

        Since r288878 started to use pyfakefs, Port.relative_test_filename
        didn't work as expected in unit tests with Windows Python because
        TestPort.layout_tests_dir returned Unix-style path while the path
        name of layout test is Windows-style path.

        * Scripts/webkitpy/port/test.py: Use abspath to convert Unix-style
        path to Windows-style for Windows Python.

2022-02-06  Yusuke Suzuki  <ysuzuki@apple.com>

        [WTF] Make Bitmap constexpr friendly
        https://bugs.webkit.org/show_bug.cgi?id=236180

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/Bitmap.cpp:

2022-02-06  Tyler Wilcock  <tyler_w@apple.com>

        AX: Add internal-only flag to enable WIP display: contents support
        https://bugs.webkit.org/show_bug.cgi?id=236179

        Reviewed by Chris Fleizach.

        * DumpRenderTree/TestOptions.cpp:
        (WTR::TestOptions::defaults):

2022-02-06  Wenson Hsieh  <wenson_hsieh@apple.com>

        Adjust `platformResetStateToConsistentValues` to avoid grabbing the general pasteboard when possible
        https://bugs.webkit.org/show_bug.cgi?id=236196

        Reviewed by Darin Adler.

        For reasons that are still unknown, when running layout tests in the iOS 15.4 simulator, the iOS simulator's
        `pasted` sometimes gets into a state where the work queue (com.apple.pasteboard.PBPasteboardModel-work-queue)
        gets permanently stuck while attempting to save pasteboard items.

        Once in this state, all subsequent layout tests will time out (regardless of whether the tests themselves