@@ -44,7 +44,7 @@ from webkitcorepy.call_by_need import CallByNeed
 from webkitcorepy.editor import Editor
 from webkitcorepy.file_lock import FileLock
 
-version = Version(0, 12, 9)
+version = Version(0, 12, 10)
 
 from webkitcorepy.autoinstall import Package, AutoInstall
 if sys.version_info > (3, 0):
@@ -62,7 +62,12 @@ AutoInstall.register(Package('dateutil', Version(2, 8, 1), pypi_name='python-dat
 AutoInstall.register(Package('entrypoints', Version(0, 3, 0)))
 AutoInstall.register(Package('funcsigs', Version(1, 0, 2)))
 AutoInstall.register(Package('idna', Version(2, 10)))
-AutoInstall.register(Package('packaging', Version(20, 4)))
+
+if sys.version_info > (3, 0):
+    AutoInstall.register(Package('packaging', Version(21, 3)))
+else:
+    AutoInstall.register(Package('packaging', Version(20, 4)))
+
 AutoInstall.register(Package('pyparsing', Version(2, 4, 7)))
 AutoInstall.register(Package('requests', Version(2, 24)))
 AutoInstall.register(Package('setuptools_scm', Version(5, 0, 2), pypi_name='setuptools-scm'))
