@@ -1,3 +1,15 @@
+2022-02-07  Roy Reapor  <rreapor@apple.com>
+
+        [webkitcorepy] Autoinstaller may fail to install wheels
+        https://bugs.webkit.org/show_bug.cgi?id=236174
+
+        Reviewed by Jonathan Bedard.
+
+        Upgrading `packaging` module autoinstalls abi3 universal2 wheel
+        distributions that were previously being skipped.
+
+        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py:
+
 2022-02-06  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         REGRESSION(r288878) webkitpy.layout_tests.controllers.layout_test_finder_legacy_unittest.LayoutTestFinderTests tests are failing with Windows Python
